--- a/wiki/NlCodingApp.wiki
+++ b/wiki/NlCodingApp.wiki
@@ -1,8 +1,8 @@
-#summary Improving the application base in the framework.
-#sidebar En
+#summary Verbetering van de toepassing basis in framework.
+#sidebar Nl
 <wiki:comment>revision: 1</wiki:comment>
 
-To improve the existing base of applications _(located in `apps` directory)_ do the following:
- * create a new empty project _(in the `/var/www/` directory)_
- * checkout the project from SVN _(use the path to this project, for example: `https://phpdays.googlecode.com/svn/trunk/apps/phpdays.org`)_
- * configure the project, but do not commit configuration files to SVN
+Ter verbetering van de bestaande basis van de aanvragen _ (gevestigd in `apps" directory) _ het volgende doen:
+ * Maak een nieuw leeg project _ (in de `/ var / www /" directory) _
+ * Checkout het project van SVN _ (gebruik het pad naar dit project, bijvoorbeeld: "https: / / phpdays.googlecode.com / svn / trunk / apps / phpdays.org`) _
+ * Configureren van het project, maar niet configuratiebestanden verbinden SVN
