Edited wiki page through web user interface.

--- a/wiki/NlDoc.wiki
+++ b/wiki/NlDoc.wiki
@@ -1,30 +1,30 @@
-#summary Writing the Documentation.
+#summary Schrijven van de Documentatie.
 #sidebar Nl
 <wiki:comment>revision: 1</wiki:comment>
 
-You can help us to improve the documentation, fix errors in it, and translate it into other languages.
+U kunt ons helpen om de documentatie te verbeteren, kijk fouten in, en vertalen naar andere talen.
 
-=== Translating the Documentation ===
+=== Vertaal de Documentatie ===
 
-To translate the documentation into other languages you should know the following:
- * page names start with a language name abbreviation _(Ru for Russian, En for English, Fr for French)_
- * go to the page you would like to translate _(for example [RuAnswers])_
- * click "Edit this page" at the top of the page to see the page in the wiki format
- * copy the content of the page in the original language
- * point your browser to a translated page by changing the language prefix in the name of the page _(for example, if you opened RuAnswers and are going to translate it to English, change the name to EnAnswers)_
- * if the page does not exist, you will be offered to create it _(click the "Create a New Page" link)_
- * paste the copied content in the original language
- * translate the text from the original language
- * at the top of the text edit the title of the page in the `#summary` line
- * add/edit a `#sidebar Xx` line  _(where Xx is the language of the newly translated page)_
- * click "Preview" to check the page's formatting
- * click "Save page" to save the page
+De documentatie te vertalen naar andere talen die u moet weten is het volgende:
+ * Pagina namen beginnen met een taal naam afkorting _(Ru voor Russian, En voor English, Fr voor French)_
+ * Ga naar de pagina die u wenst te vertalen _ (bijvoorbeeld [RuAnswers])_
+ * Klik "Edit this page" aan de bovenkant van de pagina om de pagina in de wiki-formaat
+ * Kopieer de inhoud van de pagina in de oorspronkelijke taal
+* In uw browser naar een vertaalde pagina door het veranderen van de taal voorvoegsel in de naam van de pagina _ (bijvoorbeeld als u RuAnswers geopend en gaan om het te vertalen naar het Engels, de naam te veranderen EnAnswers) _
+* Als de pagina niet bestaat, zal u worden aangeboden aan het creëren _ (klik op de "Create a New Page"-link) _
+ * Plak de gekopieerde inhoud in de oorspronkelijke taal
+ * vertaal de tekst van de oorspronkelijke taal
+* Aan de top van de tekst bewerken de titel van de pagina in de `#` samenvatting lijn
+ * Toevoegen / bewerken van een `# sidebar Xx` lijn _ (waarbij XX is de taal van de pas vertaalde pagina) _
+ * Klik "Voorbeeld" om te controleren opmaak van de pagina
+ * Klik op "Save page" op te slaan de pagina
 
-Also think next:
- * not translate keyword `#summary` _(describe page content)_. This line show in [http://code.google.com/p/phpdays/w/list list of all wiki pages]
- * no tranclate keyword `#sidebar` _(page language)_. Start from capitalize letter
- * change links to current tranclation. For example, change `[En link text]` to `[Ru текст ссылки]`
+Denk aan het volgende:
+ * vertaal niet het `#summary` _(beschrijven inhoud van de pagina) _. Deze lijn show in[http://code.google.com/p/phpdays/w/list list of all wiki pages]
+ * vertaal niet het woord `#sidebar` _(page language)_. Beginnen met een hoofdletter schrijven
+ * Verandering links naar huidige tranclation. Bijvoorbeeld verandering`[En link text]` to `[Ru текст ссылки]`
 
-When a document is translated a wiki comment with a revision number (`<wiki:comment>revision: xx</wiki:comment>`) must be copied from the original document.
+Wanneer een document wordt vertaald een wiki reactie met een herziening aantal(`<wiki:comment>revision: xx</wiki:comment>`) moet gekopieerd worden van het origeel
 
-To follow changes in the documentation go to [http://code.google.com/p/phpdays/source/list Source - Changes] _(available at the top)_.
+Volgen veranderingen in de documentatie naar [http://code.google.com/p/phpdays/source/list Source - Changes] _(available at the top)_.
