--- a/wiki/NlSpeedup.wiki
+++ b/wiki/NlSpeedup.wiki
@@ -1,13 +1,15 @@
-#summary One-sentence summary of this page.
+#summary Making a Web Site Faster.
+#sidebar En
+<wiki:comment>revision: 1</wiki:comment>
 
-= Introduction =
+To make effective use of a server's resources and their allocation reasonable we recommend applying some useful technologies.
 
-Add your content here.
+=== Memcached ===
 
+[http://ru.wikipedia.org/wiki/Memcached Memcached] stores result sets from queries to a database in memory _ (eg MySQL) _. This allows to reduce the number of queries to a database.
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+See instructions how to install memcached on [http://pureform.wordpress.com/2008/01/10/installing-memcache-on-windows-for-php/ Windows]. To install memcached on Ubuntu enter the following two commands:
+(((
+sudo aptitude install memcached
+sudo aptitude install php5-memcache
+)))
