--- a/wiki/NlSpeedup.wiki
+++ b/wiki/NlSpeedup.wiki
@@ -1,14 +1,14 @@
-#summary Making a Web Site Faster.
-#sidebar En
+#summary Het maken van een website sneller.
+#sidebar Nl
 <wiki:comment>revision: 1</wiki:comment>
 
-To make effective use of a server's resources and their allocation reasonable we recommend applying some useful technologies.
+Om effectief gebruik te maken van de middelen van een server en de verdeling daarvan redelijk raden we een aantal nuttige toepassing van technologieën.
 
 === Memcached ===
 
-[http://ru.wikipedia.org/wiki/Memcached Memcached] stores result sets from queries to a database in memory _ (eg MySQL) _. This allows to reduce the number of queries to a database.
+[http://ru.wikipedia.org/wiki/Memcached Memcached] winkels resultaat sets van query's naar een database in het geheugen (bv. MySQL). Dit laat toe om het aantal vragen te beperken tot een database.
 
-See instructions how to install memcached on [http://pureform.wordpress.com/2008/01/10/installing-memcache-on-windows-for-php/ Windows]. To install memcached on Ubuntu enter the following two commands:
+Zie de instructies hoe memcached geinstalleerd is op [http://pureform.wordpress.com/2008/01/10/installing-memcache-on-windows-for-php/ Windows]. Te installeren op Ubuntu memcached voer de volgende twee commando's: 
 (((
 sudo aptitude install memcached
 sudo aptitude install php5-memcache
